# azcam-osu4k

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
azcam_osu4k/: __init__.py  archon_commands.py  console.py  console_osu4k.py  detector_sta0500_osu4k.py  index_OSU4k.html  osu4k_custom.py  server.py  server_osu4k.py  start_azcamtool.py
azcam_osu4k/archon_code/: OSU4K_1amp.acf
azcam_osu4k/docs/: ITL885.dwg
docs/: index.md
support/: console OSU4k.lnk  install.py  parameters_monitor_osu4k.ini  server OSU4k.lnk  setup_time_sync.ps1  start_console_osu4k.py  start_monitor_osu4k.bat  start_monitor_osu4k.py  start_server_osu4k.bat  start_server_osu4k.py
support/datafolder/parameters/: parameters_server_osu4k.ini
support/datafolder/templates/: fits_template_OSU4k.txt
support/parameters/: parameters_console_osu4k.ini
