[tool.poetry]
name = "azcam-osu4k"
version = "22.1"
description = "Azcam extension for OSU4k camera"
authors = ["Michael Lesser <mlesser@arizona.edu>"]
license = "LICENSE"
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
repository = "https://github.com/mplesser/azcam-osu4k/"
documentation = "https://mplesser.github.io/azcam/"

[tool.poetry.dependencies]
python = "^3.9"
ipython = "*"
rich = "*"
azcam = "*"
azcam-archon = "*"
azcam-ds9 = "*"
azcam-fastapi = "*"
azcam-webtools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
