[project]
name = "azcam-osu4k"
version = "22.1.1"
description = "Azcam extension for OSU4k camera"
license = {file ="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "ipython",
    "rich",
    "azcam",
    "azcam-archon",
    "azcam-ds9",
    "azcam-fastapi",
    "azcam-webtools",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-osu4k/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_osu4k"