[project]
name = "azcam-osu4k"
version = "24.1"
description = "Azcam environment for OSU4k camera"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = ["ipython", "rich", "azcam", "azcam_console"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-osu4k/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_osu4k"
